# yt-dlp

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitkeep  .pre-commit-config.yaml  .pre-commit-hatch.yaml  .readthedocs.yml  AGENTS.md  AI_POLICY.md  API_README.md  ASYNC_DOWNLOAD_README.md  AUTHORS-Fork  Bundle  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  Changelog.md  Collaborators.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.cloudflared  Dockerfile.nginx  English Dictionary.py  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Maintainers.md  Makefile  Makefile.am  PMD ENTERTAINMENT  PMOVES.AI_INTEGRATION.md  Pat  Pipfile  Procfile  README.md  RunCommand.txt  (+64 more)
.NO_AI/: .gitignore  README.md
.codeboarding/: Application Core.md  Application Update.md  Authentication & Session Management.md  Configuration Management.md  File Downloaders.md  Information Extraction.md  JavaScript Interpreter.md  Networking.md  Post-Processing.md  Utilities.md  on_boarding.md
.devcontainer/: devcontainer.json
.fleet/: run.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yml  copilot-instructions.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_broken_site.md  1_broken_site.yml  2_site_support_request.md  2_site_support_request.yml  3_site_feature_request.md  3_site_feature_request.yml  4_bug_report.md  4_bug_report.yml  5_feature_request.md  5_feature_request.yml  6_question.md  6_question.yml  config.yml
.github/ISSUE_TEMPLATE_tmpl/: 1_broken_site.md  1_broken_site.yml  2_site_support_request.md  2_site_support_request.yml  3_site_feature_request.md  3_site_feature_request.yml  4_bug_report.md  4_bug_report.yml  5_feature_request.md  5_feature_request.yml  6_question.yml
.github/workflows/: antispam.yaml  build-desktop.yml  build.yml  cache-warmer.yml  challenge-tests.yml  ci.yml  codeql.yml  core.yml  coverage.yml  download.yml  fix_readme.yml  issue-lockdown.yml  label-handler.yml  pages_downloader.yaml  pat-test.yaml  potential-duplicates.yml  publish.yml  python-publish.yml  quick-test.yml  release-master.yml  release-nightly.yml  release.yml  remote_file_downloader.yaml  sanitize-comment.yml  shai-hulud-check.yml  signature-tests.yml  sync.yml  test-workflows.yml  wiki.yml  workflow.yml  yt-dlp-download.yml
api/: README.md  app.py  common.py  download.py  fetch.py  service.py
api/routes/: tiktok.py  twitch.py  youtube.py
app/: __init__.py  __main__.py  api.py  bootstrap.py  main.py
app/static/: index.html
blog/shifting-the-trap/: bf.py  bfc.py  compiling-the-trap.md  run_proof.py
bundle/: __init__.py  py2exe.py  pyinstaller.py
carey-nieuwhof/: .env.example  .gitignore  README.md  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
chit/: secrets_manifest_v2.yaml
devscripts/: bash-completion.in  bash-completion.py  build_aes_c.py  buildserver.py  changelog_override.json  changelog_override.schema.json  check-porn.py  cli_to_api.py  cov-combine  create-github-release.py  fish-completion.in  fish-completion.py  generate_aes_testdata.py  generate_third_party_licenses.py  include_data_files.py  install_deps.py  lazy_load_template.py  make_changelog.py  make_contributing.py  make_issue_template.py  make_lazy_extractors.py  make_mastodon_instance_list.py  make_misskey_instance_list.py  make_peertube_instance_list.py  make_readme.py  make_supportedsites.py  prepare_manpage.py  pyinst.py  release.sh  run_coverage.py  run_tests.bat  run_tests.py  run_tests.sh  sanitize_readme.py  scraper_helper.py  set-variant.py  setup_variables.py  setup_variables_tests.py  show-downloads-statistics.py  tomlparse.py  (+15 more)
docs/: Changelog.md  Collaborators.md  Contributing.md  LICENSE.md  Makefile.in  README.md  RUNTIME.md  conf.py  index.rst  module_guide.rst  nginx-relay-ytdlp.conf.example  requirements.txt  supportedsites.md  youtube_geo_verification_proxy.md  ytdlp_plugins.md
downloads/: archive.txt
gui/: main.py  requirements.txt
nginx/: entrypoint.sh  nginx.conf.template
pmoves_announcer/: __init__.py
pmoves_health/: __init__.py
pmoves_registry/: __init__.py
pmoves_yt_service/: Dockerfile  README.md  __init__.py  docs_catalog.py  docs_sync.py  requirements-ci.txt  requirements.txt  youtube_control.py  yt.py
scripts/: update-version-workflow.py  update-version.py
site/: index.html
telegram_bot/: bot.py  config.py  database.py  downloader.py  entrypoint.sh  fileserver.py  requirements.txt
test/: README.md  conftest.py  helper.py  parameters.json  test_AeonCo_2_emyi4z-O0ls.info.json  test_InfoExtractor.py  test_NetworkHandler.py  test_RequestHandler.py  test_YoutubeDL.py  test_YoutubeDLCookieJar.py  test_acfun.py  test_aes.py  test_age_restriction.py  test_all_urls.py  test_cache.py  test_compat.py  test_config.py  test_cookies.py  test_devalue.py  test_donate.py  test_download.py  test_downloader_external.py  test_downloader_http.py  test_execution.py  test_ffmpeg_progress.py  test_fragment_fd_mcdc.py  test_gerador_senha.py  test_hls.py  test_http.py  test_http_proxy.py  test_iqiyi_sdk_interpreter.py  test_jsi_external.py  test_jsinterp.py  test_jsinterp_external.py  test_mp4parser.py  test_netrc.py  test_networking.py  test_networking_utils.py  test_options.py  test_overwrites.py  (+28 more)
web/: index.html  script.js  style.css
webapp/: .gitignore  README.md  app.py  requirements.txt
webui/: app.py  requirements.txt  run.sh
youtube_dlc/: YoutubeDL.py  __init__.py  compat.py  options.py  update.py  utils.py  version.py
yt-studio/: HANDOFF.md  README.md  YTStudio.spec  main.py  requirements.txt
yt_dlp/: U  YoutubeDL.py  Yt-dlp  __init__.py  __main__.py  _aes_native.c  _globals.py  aes.py  blowfish.py  cache.py  casefold.py  compat.py  cookies.py  cookies.py.rej  dependencies.py  formats.py  globals.py  jsinterp.py  minicurses.py  mp4_parser.py  mp4parser.py  options.py  parsing.py  plugins.py  socks.py  swfinterp.py.disabled  syncws.py  update.py  utils.py  version.py  webvtt.py  yt_dlp.pyproj
ytcfg-extension/: README.md  content.js  manifest.json
(+2310 files in other folders)
